// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return correctly summaryExpenses with more expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23.80
     
  </h1>
</div>
`;

exports[`Should return correctly summaryExpenses with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;
